--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "week3demo3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "server.js",
   "author": "Blessing",
   "license": "ISC",
   "dependencies": {
